Add checkstyle Add I18nProperties so that IDE assistance is available for the keys follow https://docs.spring.io/spring-boot/3.5/specification/configuration-metadata/annotation-processor.html